Feedback (#24)
* [fix] Revised Feedback to match domain model.

* [fix] Refactor User, Repository, FeedbackService, and FeedbackController based on Design Class Diagram.

* [fix] Refactor FeedbackServiceTest.